--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '16'
+        registry-url: 'https://registry.npmjs.org'
 
     - name: 安装依赖
       run: npm install
@@ -28,7 +29,6 @@ jobs:
       run: |
         npm install semver
 
-
         current_version=$(node -p "require('./package.json').version")
         echo "当前版本: $current_version"
 
@@ -36,7 +36,10 @@ jobs:
         echo "新版本: $new_version"
 
         npm version $new_version --no-git-tag-version
-
+        
+        # 设置npm使用NPM_TOKEN认证
+        npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+        
         npm publish
 
     - name: 推送新版本标签
