--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,16 +37,15 @@ jobs:
 
         npm version $new_version --no-git-tag-version
         
-        # 设置npm使用NPM_TOKEN认证
         npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
         
         npm publish
 
-    - name: 推送新版本标签
-      if: success()
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git commit -am "${{ steps.bump_version.outputs.new_version }}"
-        git tag ${{ steps.bump_version.outputs.new_version }}
-        git push origin main --tags
+- name: 推送新版本标签
+  if: success()
+  run: |
+    git config --global user.name "GitHub Actions"
+    git config --global user.email "actions@github.com"
+    git commit -am "$new_version"
+    git tag $new_version
+    git push origin main --tags
