--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ jobs:
       run: npm install
 
     - name: 凹凸版本和发布
+      id: bump_version
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       run: |
@@ -40,12 +41,19 @@ jobs:
         npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
         
         npm publish
+        
+        echo "new_version=$new_version" >> $GITHUB_ENV
 
     - name: 推送新版本标签
       if: success()
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git commit -am "$new_version"
-        git tag $new_version
+        
+        COMMIT_MESSAGE="${new_version}"
+
+        git add .
+        git commit -m "$COMMIT_MESSAGE"
+
+        git tag ${new_version}
         git push origin main --tags
